--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/wjn/events.git"
+        "url": "git+https://github.com/wjn/events.git#url-shortener"
     },
     "keywords": [
         "TypeScript",
